# link-scraper

./: .gitignore  README.md  flake.nix  hix.cabal  link-scraper.cabal
nix/: hix.nix
src/: Main.hs
