cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hix
version: 1.0.0.2

executable hix
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base >= 4.17.1.0,
    text >= 2.0.2,
    Cabal >= 3.8.1.0,
    scalpel >= 0.6.2.1,
    scalpel-core >= 0.6.2.1
