cabal-version: 3.6
name: link-scraper
version: 0.1.0.0

executable link-scraper
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    Cabal,
    base,
    network-uri,
    scalpel,
    scalpel-core,
    template-haskell,
    text,

    -- Debugger in VSCode
    ghci-dap,
    haskell-debug-adapter
